--- a/_posts/2012-08-12-html.markdown
+++ b/_posts/2012-08-12-html.markdown
@@ -4,3 +4,17 @@ title: html基础
 ---
 
 中文测试
+
+代码测试
+
+HTML代码：
+	
+	<div id="header"></div>
+	
+	<div id="container">
+	  <div id="center" class="column"></div>
+	  <div id="left" class="column"></div>
+	  <div id="right" class="column"></div>
+	</div>
+	
+	<div id="footer"></div>
